--- a/TopGastroGuru/app/src/main/res/values/strings.xml
+++ b/TopGastroGuru/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="username_wrong_info">Username should have at least 3 characters</string>
     <string name="password_wrong_info">Password should not have any special characters (~#^|$%&amp;*!), should be of length >= 5, with at least one capital letter and at least one digit</string>
     <string name="invalid_credentials">Invalid credentials</string>
+    <string name="all_meals">All meals</string>
+    <string name="my_meals">My meals</string>
+    <string name="profile">Profile</string>
+    <string name="diet_plan">Diet Plan</string>
+    <string name="statistics">Statistics</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
