--- a/TopGastroGuru/app/src/main/res/values/strings.xml
+++ b/TopGastroGuru/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="profile">Profile</string>
     <string name="diet_plan">Diet Plan</string>
     <string name="statistics">Statistics</string>
+<!--    TODO: set the default value in fragment xml-->
+    <string name="item_not_available">Not available</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
