--- a/TopGastroGuru/app/src/main/res/values/strings.xml
+++ b/TopGastroGuru/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="item_not_available">Not available</string>
     <string name="quit">quit</string>
     <string name="save">save</string>
+    <string name="photo_button">Take photo</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
