Add removeFilter option

--- a/TopGastroGuru/app/src/main/res/values/strings.xml
+++ b/TopGastroGuru/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="filter_by_category">Filter by category</string>
     <string name="filter_by_area">Filter by Area</string>
     <string name="filter_by_ingredient">Filter by ingredient</string>
+    <string name="remove_filter">Remove filter</string>
 </resources>
