Add Profile view, Add logout

--- a/TopGastroGuru/app/src/main/res/values/strings.xml
+++ b/TopGastroGuru/app/src/main/res/values/strings.xml
@@ -28,4 +28,15 @@
     <string name="remove_filter">Remove filter</string>
     <string name="search_by_tag">Search by Tag</string>
     <string name="search_by_name">Search by Name</string>
+    <string name="change_password">Change password</string>
+    <string name="log_out">Log out</string>
+    <string name="old_password">Old password</string>
+    <string name="new_password">New password</string>
+    <string name="update_password">Update password</string>
+    <string name="invalid_old_password">Invalid old password</string>
+    <string name="invalid_new_password">Invalid new password</string>
+    <string name="password_updated_successfully">Password updated successfully</string>
+    <string name="empty_fields">Empty fields!</string>
+    <string name="passwords_cannot_be_the_name">Passwords cannot be the same!</string>
+    <string name="give_up">Give up</string>
 </resources>
