Add tabLayout, going gas

--- a/TopGastroGuru/app/src/main/res/values/strings.xml
+++ b/TopGastroGuru/app/src/main/res/values/strings.xml
@@ -45,4 +45,11 @@
     <string name="are_you_sure">Are you sure?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
 </resources>
